--- a/index.html
+++ b/index.html
@@ -10,16 +10,38 @@
 <body>
     <div class="container">
         <h1>Subir Factura a S3</h1>
-        <input type="file" id="fileInput" />
+        <input type="file" id="fileInput" accept="image/*" />
+        <!-- Added image preview container -->
+        <div id="imagePreview" class="preview-container" style="display: none;">
+            <img id="previewImg" alt="Vista previa" />
+            <p class="preview-text">Vista previa de la imagen</p>
+        </div>
         <button onclick="uploadFile()">Subir</button>
         <div id="notification"></div>
     </div>
 
     <script>
+        document.getElementById("fileInput").addEventListener("change", function(event) {
+            const file = event.target.files[0];
+            const previewContainer = document.getElementById("imagePreview");
+            const previewImg = document.getElementById("previewImg");
+
+            if (file && file.type.startsWith("image/")) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    previewImg.src = e.target.result;
+                    previewContainer.style.display = "block";
+                };
+                reader.readAsDataURL(file);
+            } else {
+                previewContainer.style.display = "none";
+            }
+        });
+
         async function uploadFile() {
             const file = document.getElementById("fileInput").files[0];
             const notification = document.getElementById("notification");
-            const backend_url = "https://backend-facturass3.onrender.com"
+            const backendUrl = "https://tu-app-backend.onrender.com"
 
             if (!file) {
                 showNotification("Selecciona un archivo primero", "error");
@@ -27,7 +49,7 @@
             }
 
             try {
-                const response = await fetch(`${backend_url}/get-presigned-url?fileName=${file.name}&fileType=${file.type}`);
+                const response = await fetch(`${backendUrl}/get-presigned-url?fileName=${file.name}&fileType=${file.type}`);
                 const data = await response.json();
 
                 if (data.error) {
@@ -42,6 +64,8 @@
                 });
 
                 showNotification("✅ Factura subida exitosamente 🚀", "success");
+                document.getElementById("imagePreview").style.display = "none";
+                document.getElementById("fileInput").value = "";
             } catch (err) {
                 console.error(err);
                 showNotification("❌ Error al subir la factura", "error");
